--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  padding: 2rem;
+}
+
+.input {
+  border-radius: 100px;
+  border: 1px solid black;
+  margin-block: 10px;
+  display: block;
+  height: 2rem;
+  text-indent: 10px;
+}
+
+input[type="submit"] {
+  padding: 10px;
+}
